--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,53 @@
+// Changes default bootstap colors
 
+$main-color: #5265E1;
+$second-color: #FA5959;
 
 @import "./node_modules/bootstrap/scss/bootstrap.scss";
 
+body {
+    margin: 0 auto;
+    max-width: 100%;
+}
+
+// navbar
+
+.navbar {
+    margin-bottom: 30px;
+}
+
+.row div {
+    border: 3px solid silver;
+}
+
+.navbar-toggler {
+    border: none;
+}
+
+.navbar-collapse {
+    display: flex;
+    justify-content: center;
+    padding-left: 150px;
+}
+
+.icon-logo {
+    border: none;
+}
+
+.nav-item {
+    margin-left: 10px;
+    margin-right: 10px;
+    color: grey;
+}
+
+.nav-link {
+    color: gray;
+    display: flex;
+    justify-content: center;
+}
+
+.btn-custom {
+    background-color: $second-color;
+    width: 110px;
+    color: white;
+}
