--- a/style.scss
+++ b/style.scss
@@ -51,3 +51,29 @@ body {
     width: 110px;
     color: white;
 }
+
+// Container1
+
+.row div {
+    border: none;
+}
+
+@media (max-width: 990px) {
+    #container1 {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #column1 {
+        order: 2;
+    }
+
+    #column2 {
+        order: 1;
+    }
+
+    .info1 {
+        text-align: center;
+    }
+}
+
