--- a/style.css
+++ b/style.css
@@ -12244,7 +12244,7 @@ h2, .h2 {
   justify-items: flex-start;
 }
 
-@media (max-width: 990px) {
+@media (max-width: 991px) {
   .features-row {
     flex-direction: column;
   }
@@ -12360,5 +12360,64 @@ h2, .h2 {
   }
   #opera-card {
     margin-top: 0px;
+  }
+}
+.faqs-section {
+  margin-top: 60px;
+}
+
+.faqs-text {
+  text-align: center;
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.faqs-accordion {
+  margin-top: 50px;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.accordion-title {
+  font-size: small;
+  font-weight: bold;
+  color: rgb(73, 73, 73);
+}
+
+.accordion-body {
+  color: grey;
+}
+
+#accordion-itemOne {
+  border-top: 1px solid rgb(227, 227, 227);
+}
+
+#accordion-itemFour {
+  border-bottom: 1px solid rgb(227, 227, 227);
+}
+
+.faqs-button {
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+}
+
+.accordion {
+  --bs-accordion-active-bg: white;
+  --bs-accordion-btn-focus-box-shadow: 0 0 0 0px white;
+  --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%235265E1'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23FFA0A0'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+}
+
+@media (max-width: 991px) {
+  .faqs-accordion {
+    width: 80%;
+  }
+}
+@media (max-width: 500px) {
+  .faqs-accordion {
+    width: 100%;
   }
 }/*# sourceMappingURL=style.css.map */
